devops/k8s/deployment-scheduler.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scheduler-deployment
  labels:
    app: scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scheduler
  template:
    metadata:
      labels:
        app: scheduler
    spec:
      containers:
      - name: scheduler
        image: antonybaasan/uragsha.scheduler:v0.1
        ports:
        - containerPort: 80
