devops/k8s/deployment-signalling.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: signalling-deployment
  labels:
    app: signalling
spec:
  replicas: 1
  selector:
    matchLabels:
      app: signalling
  template:
    metadata:
      labels:
        app: signalling
    spec:
      containers:
      - name: signalling
        image: antonybaasan/uragsha.signalling:v0.1
        ports:
        - containerPort: 80
