devops/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginxdemos/hello
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
  labels:
    app: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp
        image: antonybaasan/uragsha.webapp:v0.1
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: signalling-deployment
  labels:
    app: signalling
spec:
  replicas: 1
  selector:
    matchLabels:
      app: signalling
  template:
    metadata:
      labels:
        app: signalling
    spec:
      containers:
      - name: signalling
        image: antonybaasan/uragsha.signalling:v0.1
        ports:
        - containerPort: 80
