devops/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uragsha-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "hello-cookie"
    nginx.ingress.kubernetes.io/session-cookie-expires: "86400"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "86400"
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - app.uragsha.com
    secretName: uragsha-tls
  rules:
  - host: demo.uragsha.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: my-service
            port:
              number: 80
  - host: app.uragsha.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: webapp-service
            port:
              number: 80
